--- a/Project3-Client/src/index.css
+++ b/Project3-Client/src/index.css
@@ -132,3 +132,17 @@ nav li {
   text-align: center;
   margin: 0 auto;
 }
+
+.box{
+  margin: auto;
+  flex-direction: column;
+  align-items: center;
+  width: 28%;
+  height: 28%;
+  padding: 20px;
+  border: 3px solid black;
+  border-radius: 15px;
+  background: #bbe4e9
+  
+
+}
