--- a/Project3-Client/src/index.css
+++ b/Project3-Client/src/index.css
@@ -29,12 +29,11 @@ textarea {
 }
 
 nav {
-  background: #515f7d;
+  background: #e8751a;
   color: white;
   padding: 0px 20px;
   box-shadow: 0px 1px 2px gray;
   width: 100%;
-  margin-bottom: 15px;
   padding: 5px;
 }
 
@@ -135,14 +134,75 @@ nav li {
 
 .box{
   margin: auto;
+  margin-top: 63px;
   flex-direction: column;
   align-items: center;
-  width: 28%;
-  height: 28%;
+  width: 25vw;
+  height: 70vh;
   padding: 20px;
-  border: 3px solid black;
   border-radius: 15px;
-  background: #bbe4e9
-  
+  box-shadow: 7px 7px 10px gray
+ }
+
+ .box-edit{
+  margin: auto;
+  margin-top: 5px;
+  padding: 0;
+  flex-direction: column;
+  align-items: center;
+  width: 23vw;
+  height: 70vh;
+  border-radius: 15px;
+  box-shadow: 7px 7px 10px gray
+ }
+
+ .text-info{
+  margin:0
+ }
+ .btn-save{
+  margin-top: 10px;
+ }
+ .text-info{
+  font-family: 'Helvetica Neue', 
+  sans-serif; font-size: 35px; font-weight: 100; 
+  letter-spacing: 1px; 
+ }
+
+@media (max-device-width: 375px) {
+.box{
+  margin: auto;
+  margin-top: 90px;
+  flex-direction: column;
+  align-items: center;
+  width: 65vw;
+  height: 50vh;
+  padding: 20px;
+  border-radius: 15px;
+  box-shadow: 7px 7px 10px gray
+ }
+
+ .text-info{
+  margin-top: 10px;
+  font-family: 'Helvetica Neue', 
+  sans-serif; font-size: 46px; font-weight: 100; 
+  letter-spacing: 1px; 
+ }
+
+ .box-edit{
+  margin: auto;
+  margin-top: 10px;
+  flex-direction: column;
+  align-items: center;
+  width: 65vw;
+  height: 63vh;
+  padding: 20px;
+  border-radius: 15px;
+  box-shadow: 7px 7px 10px gray
+ }
+
+ .btn-save{
+  margin-top: 10px;
+ }
+ 
 
 }
