--- a/Project3-Client/src/index.css
+++ b/Project3-Client/src/index.css
@@ -175,7 +175,7 @@ nav li {
   flex-direction: column;
   align-items: center;
   width: 65vw;
-  height: 50vh;
+  height: 55vh;
   padding: 20px;
   border-radius: 15px;
   box-shadow: 7px 7px 10px gray
@@ -198,6 +198,11 @@ nav li {
   padding: 20px;
   border-radius: 15px;
   box-shadow: 7px 7px 10px gray
+ }
+ .text-info{
+  font-family: 'Helvetica Neue', 
+  sans-serif; font-size: 35px; font-weight: 100; 
+  letter-spacing: 1px; 
  }
 
  .btn-save{
