--- a/Project3-Client/src/index.css
+++ b/Project3-Client/src/index.css
@@ -29,7 +29,7 @@ textarea {
 }
 
 nav {
-  background: #e8751a;
+  background: #405156;
   color: white;
   padding: 0px 20px;
   box-shadow: 0px 1px 2px gray;
@@ -137,11 +137,35 @@ nav li {
   margin-top: 63px;
   flex-direction: column;
   align-items: center;
-  width: 25vw;
+  width: 28vw;
   height: 70vh;
   padding: 20px;
   border-radius: 15px;
-  box-shadow: 7px 7px 10px gray
+  box-shadow: 7px 7px 10px gray;
+  font-family: 'Helvetica Neue', 
+  sans-serif; font-size: 15px; font-weight: 100; 
+  letter-spacing: 1px;
+  background-color: white; 
+ }
+
+ .card-title{
+  font-family: 'Helvetica Neue', 
+  sans-serif; font-size: 30px; font-weight: 100; 
+  letter-spacing: 1px; 
+ }
+
+ .box h3{
+   margin-bottom: 10px;
+  font-family: 'Helvetica Neue', 
+  sans-serif; font-size: 20px; font-weight: 100; 
+  letter-spacing: 1px;
+ }
+
+ .box h4{
+   margin-bottom: 30px;
+  font-family: 'Helvetica Neue', 
+  sans-serif; font-size: 20px; font-weight: 100; 
+  letter-spacing: 1px;
  }
 
  .box-edit{
@@ -150,42 +174,53 @@ nav li {
   padding: 0;
   flex-direction: column;
   align-items: center;
-  width: 23vw;
+  width: 25vw;
   height: 70vh;
   border-radius: 15px;
-  box-shadow: 7px 7px 10px gray
+  box-shadow: 7px 7px 5px gray
  }
 
- .text-info{
+ .internal-box{
+  margin: auto;
+  width: 23vw;
+  height: 55vh;
+  margin-top: 5px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border-radius: 15px;
+  box-shadow: 1px 1px 7px gray; 
+  background-color: #f9f9f9; 
+ }
+
+ .btn-save{
+  margin-top: 35px;
+ }
+ .text{
   margin:0
  }
- .btn-save{
-  margin-top: 10px;
- }
- .text-info{
+
+ .text{
   font-family: 'Helvetica Neue', 
   sans-serif; font-size: 35px; font-weight: 100; 
+  letter-spacing: 1px; 
+ }
+ .text-1{
+  font-family: 'Helvetica Neue', 
+  sans-serif; font-size: 15px; font-weight: 100; 
   letter-spacing: 1px; 
  }
 
 @media (max-device-width: 375px) {
 .box{
   margin: auto;
-  margin-top: 90px;
+  margin-top: 80px;
   flex-direction: column;
   align-items: center;
   width: 65vw;
-  height: 55vh;
+  height: 60vh;
   padding: 20px;
   border-radius: 15px;
   box-shadow: 7px 7px 10px gray
- }
-
- .text-info{
-  margin-top: 10px;
-  font-family: 'Helvetica Neue', 
-  sans-serif; font-size: 46px; font-weight: 100; 
-  letter-spacing: 1px; 
  }
 
  .box-edit{
@@ -199,14 +234,30 @@ nav li {
   border-radius: 15px;
   box-shadow: 7px 7px 10px gray
  }
- .text-info{
+ .internal-box{
+  margin: auto;
+  width: 55vw;
+  height: 46vh;
+  margin-top: 5px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border-radius: 15px;
+  box-shadow: 1px 1px 7px gray; 
+  background-color: #f9f9f9; 
+ }
+ .text{
+  margin-top: 5px;
   font-family: 'Helvetica Neue', 
   sans-serif; font-size: 35px; font-weight: 100; 
   letter-spacing: 1px; 
  }
-
- .btn-save{
-  margin-top: 10px;
+.text-1{
+  font-family: 'Helvetica Neue', 
+  sans-serif; font-size: 15px; font-weight: 100; 
+  letter-spacing: 1px; 
+}
+.btn-save{
+  margin-top: 45px;
  }
  
 
