--- a/Project3-Client/src/index.css
+++ b/Project3-Client/src/index.css
@@ -134,11 +134,11 @@ nav li {
 
 .box{
   margin: auto;
-  margin-top: 63px;
+  margin-top: 35px;
   flex-direction: column;
   align-items: center;
   width: 28vw;
-  height: 70vh;
+  height: 80vh;
   padding: 20px;
   border-radius: 15px;
   box-shadow: 7px 7px 10px gray;
@@ -183,7 +183,7 @@ nav li {
  .internal-box{
   margin: auto;
   width: 23vw;
-  height: 55vh;
+  height: 62vh;
   margin-top: 5px;
   padding-top: 10px;
   padding-bottom: 10px;
@@ -191,6 +191,7 @@ nav li {
   box-shadow: 1px 1px 7px gray; 
   background-color: #f9f9f9; 
  }
+
 
  .btn-save{
   margin-top: 15px;
@@ -201,7 +202,7 @@ nav li {
 
  .text{
   font-family: 'Helvetica Neue', 
-  sans-serif; font-size: 35px; font-weight: 100; 
+  sans-serif; font-size: 30px; font-weight: 100; 
   letter-spacing: 1px; 
  }
  .text-1{
@@ -217,11 +218,11 @@ nav li {
 @media (max-device-width: 375px) {
 .box{
   margin: auto;
-  margin-top: 80px;
+  margin-top: 60px;
   flex-direction: column;
   align-items: center;
   width: 65vw;
-  height: 60vh;
+  height: 65vh;
   padding: 20px;
   border-radius: 15px;
   box-shadow: 7px 7px 10px gray
@@ -241,7 +242,7 @@ nav li {
  .internal-box{
   margin: auto;
   width: 55vw;
-  height: 46vh;
+  height: 50vh;
   margin-top: 5px;
   padding-top: 10px;
   padding-bottom: 10px;
@@ -263,6 +264,12 @@ nav li {
 .btn-save{
   margin-top: 12px;
  }
+ .box h4{
+  margin-bottom: 15px;
+ font-family: 'Helvetica Neue', 
+ sans-serif; font-size: 20px; font-weight: 100; 
+ letter-spacing: 1px;
+}
  
 
 }
