--- a/Project3-Client/src/index.css
+++ b/Project3-Client/src/index.css
@@ -183,7 +183,7 @@ nav li {
  .internal-box{
   margin: auto;
   width: 23vw;
-  height: 62vh;
+  height: 65vh;
   margin-top: 5px;
   padding-top: 10px;
   padding-bottom: 10px;
@@ -234,8 +234,9 @@ nav li {
   flex-direction: column;
   align-items: center;
   width: 65vw;
-  height: 65vh;
+  height: 68vh;
   padding: 20px;
+  padding-top: 5px;
   border-radius: 15px;
   box-shadow: 7px 7px 10px gray
  }
@@ -243,7 +244,7 @@ nav li {
   margin: auto;
   width: 55vw;
   height: 50vh;
-  margin-top: 5px;
+  margin-top: 2px;
   padding-top: 10px;
   padding-bottom: 10px;
   border-radius: 15px;
@@ -258,11 +259,11 @@ nav li {
  }
 .text-1{
   font-family: 'Helvetica Neue', 
-  sans-serif; font-size: 15px; font-weight: 100; 
+  sans-serif; font-size: 20px; font-weight: 100; 
   letter-spacing: 1px; 
 }
 .btn-save{
-  margin-top: 12px;
+  margin-top: 2px;
  }
  .box h4{
   margin-bottom: 15px;
