--- a/Project3-Client/src/App.css
+++ b/Project3-Client/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+
 .App {
   text-align: center;
 }
@@ -31,9 +33,13 @@
 .my-message-content{
   margin:0;
   color: white;
+  font-family: 'Roboto', sans-serif;
+  font-size: 0.8rem;
 }
 .other-message-content{
   margin:0;
+  font-family: 'Roboto', sans-serif;
+  font-size: 0.8rem;
 }
 
 .my-message-div{
@@ -42,7 +48,7 @@
   padding: 10px 15px;
   max-width: 50%;
   height: auto;
-  margin: 5px;
+  margin: 10px;
   border-radius: 20px;
   position: relative;
 }
@@ -53,7 +59,7 @@
   padding: 10px 15px;
   max-width: 50%;
   height: auto;
-  margin: 5px;
+  margin: 10px;
   border-radius: 20px;
   position: relative;
 }
@@ -64,12 +70,14 @@
   justify-content: center;
 }
 .chat-box{
-  max-width: 600px;
+  width: 400px;
+  border: 1px solid #D4D8E8;
 }
 .chat-display-box{
 
   height: 400px;
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 .my-message-div-container{
   width: 100%;
@@ -86,15 +94,40 @@
 .my-message-date{
   position: absolute;
   right: 0px;
-  margin-top: 0px;
+  margin-top: 10px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 0.6rem;
 
 }
 .other-message-date{
   position: absolute;
   left: 0px;
-  margin-top: 0px;
+  margin-top: 10px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 0.6rem;
 }
 
+.message-box{
+  width: 100%;
+  display: flex;
+  border-top: 1px solid #D4D8E8;
+
+}
+
+.message-box textarea{
+  margin: 0;
+  width: 380px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  resize: none;
+}
+
+.message-box button{
+  margin: 0;
+  border: none;
+}
 
 @keyframes App-logo-spin {
   from {
