--- a/Project3-Client/src/index.css
+++ b/Project3-Client/src/index.css
@@ -29,7 +29,7 @@ textarea {
 }
 
 nav {
-  background: #405156;
+  
   color: white;
   padding: 0px 20px;
   box-shadow: 0px 1px 2px gray;
@@ -143,7 +143,7 @@ nav li {
   border-radius: 15px;
   box-shadow: 7px 7px 10px gray;
   font-family: 'Helvetica Neue', 
-  sans-serif; font-size: 15px; font-weight: 100; 
+  roboto; font-size: 15px; font-weight: 100; 
   letter-spacing: 1px;
   background-color: white; 
  }
@@ -162,7 +162,7 @@ nav li {
  }
 
  .box h4{
-   margin-bottom: 30px;
+  margin-bottom: 22px;
   font-family: 'Helvetica Neue', 
   sans-serif; font-size: 20px; font-weight: 100; 
   letter-spacing: 1px;
