--- a/Project3-Client/src/index.css
+++ b/Project3-Client/src/index.css
@@ -1,5 +1,8 @@
 body {
   margin: 0;
+  font-family: 'Montserrat', sans-serif;
+  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto Mono', monospace;
 }
 
 a {
@@ -134,37 +137,68 @@ nav li {
 
 .box{
   margin: auto;
-  margin-top: 35px;
+  margin-top: 20px;
   flex-direction: column;
   align-items: center;
   width: 28vw;
   height: 80vh;
   padding: 20px;
+  border:#0a0a0a 2px solid;
   border-radius: 15px;
   box-shadow: 7px 7px 10px gray;
-  font-family: 'Helvetica Neue', 
-  roboto; font-size: 15px; font-weight: 100; 
+  font-size: 15px; font-weight: 100; 
   letter-spacing: 1px;
-  background-color: white; 
+
+
  }
 
  .card-title{
-  font-family: 'Helvetica Neue', 
-  sans-serif; font-size: 30px; font-weight: 100; 
+  font-size: 25px; 
   letter-spacing: 1px; 
  }
 
+ .box h2{
+    color: #0a0a0a;
+    font-size: 30px;
+    font-weight: bold;
+    font-family: monospace;
+    letter-spacing: 7px;
+    cursor: pointer
+  }
+  h2{
+    transition: .5s linear
+  }
+  h2:hover h2:nth-child(1){
+    margin-right: 5px
+  }
+  h2:hover h2:nth-child(1):after{
+    content: "'";
+  }
+  h2:hover h2:nth-child(2){
+    margin-left: 30px
+  }
+  h2:hover{
+    color: #fff;
+    text-shadow: 0 0 10px #fff,
+                 0 0 20px #fff, 
+                 0 0 40px #fff;
+  }
+
  .box h3{
-   margin-bottom: 10px;
-  font-family: 'Helvetica Neue', 
-  sans-serif; font-size: 20px; font-weight: 100; 
+  margin-bottom: 10px;
+  font-size: 18px; 
   letter-spacing: 1px;
  }
 
  .box h4{
   margin-bottom: 22px;
-  font-family: 'Helvetica Neue', 
-  sans-serif; font-size: 20px; font-weight: 100; 
+  font-size: 15px; 
+  letter-spacing: 1px;
+  overflow: hidden;
+ }
+
+ .box p{
+  font-size: 20px; 
   letter-spacing: 1px;
  }
 
@@ -175,9 +209,10 @@ nav li {
   flex-direction: column;
   align-items: center;
   width: 25vw;
-  height: 73vh;
+  height: 85vh;
   border-radius: 15px;
-  box-shadow: 7px 7px 5px gray
+  box-shadow: 7px 7px 5px gray;
+  
  }
 
  .internal-box{
@@ -189,8 +224,19 @@ nav li {
   padding-bottom: 10px;
   border-radius: 15px;
   box-shadow: 1px 1px 7px gray; 
-  background-color: #f9f9f9; 
+
  }
+
+ .internal-box:hover {
+  box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.4);
+  transform: scale(1.01);
+  color: #fff;
+    text-shadow: 0 0 10px #fff,
+                 0 0 20px #fff, 
+                 0 0 40px #fff;
+  transition: .5s linear
+}
+
 
 
  .btn-save{
@@ -201,13 +247,11 @@ nav li {
  }
 
  .text{
-  font-family: 'Helvetica Neue', 
-  sans-serif; font-size: 30px; font-weight: 100; 
+  font-size: 30px; font-weight: 100; 
   letter-spacing: 1px; 
  }
  .text-1{
-  font-family: 'Helvetica Neue', 
-  sans-serif; font-size: 15px; font-weight: 100; 
+  font-size: 15px; font-weight: 100; 
   letter-spacing: 1px; 
  }
 
@@ -222,11 +266,39 @@ nav li {
   flex-direction: column;
   align-items: center;
   width: 65vw;
-  height: 65vh;
+  height: 68vh;
   padding: 20px;
   border-radius: 15px;
   box-shadow: 7px 7px 10px gray
  }
+
+ .box h2{
+  color: #484848;
+  font-size: 30px;
+  font-weight: bold;
+  font-family: monospace;
+  letter-spacing: 7px;
+  cursor: pointer
+}
+h2{
+  transition: .5s linear
+}
+h2:hover h2:nth-child(1){
+  margin-right: 5px
+}
+h2:hover h2:nth-child(1):after{
+  content: "'";
+}
+h2:hover h2:nth-child(2){
+  margin-left: 30px
+}
+h2:hover{
+  color: #fff;
+  text-shadow: 0 0 10px #fff,
+               0 0 20px #fff, 
+               0 0 40px #fff;
+}
+
 
  .box-edit{
   margin: auto;
@@ -243,34 +315,39 @@ nav li {
  .internal-box{
   margin: auto;
   width: 55vw;
-  height: 50vh;
+  height: 47vh;
   margin-top: 2px;
   padding-top: 10px;
   padding-bottom: 10px;
   border-radius: 15px;
   box-shadow: 1px 1px 7px gray; 
-  background-color: #f9f9f9; 
  }
+
+ .box h4{
+  overflow: hidden;
+ }
+ 
+ .internal-box:hover {
+  box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.4);
+  transform: scale(1.01);
+}
+
+.btn-edit{
+  margin-top: 2px;
+}
+
  .text{
-  margin-top: 5px;
-  font-family: 'Helvetica Neue', 
-  sans-serif; font-size: 35px; font-weight: 100; 
+  font-size: 35px; font-weight: 100; 
   letter-spacing: 1px; 
  }
 .text-1{
-  font-family: 'Helvetica Neue', 
-  sans-serif; font-size: 20px; font-weight: 100; 
+  font-size: 20px; font-weight: 100; 
   letter-spacing: 1px; 
 }
 .btn-save{
   margin-top: 9px;
  }
- .box h4{
-  margin-bottom: 15px;
- font-family: 'Helvetica Neue', 
- sans-serif; font-size: 20px; font-weight: 100; 
- letter-spacing: 1px;
-}
+
  
 
 }
