--- a/Project3-Client/src/index.css
+++ b/Project3-Client/src/index.css
@@ -50,10 +50,11 @@ nav li {
 .card {
   width: 400px;
   padding: 10px;
+  border-radius: 15px;
   box-shadow: 0px 2px 3px grey;
   margin: 0 auto;
   margin-bottom: 20px;
-  background: #94a7c8;
+  background: gray;
   border-radius: 4px;
 }
 
@@ -135,21 +136,14 @@ nav li {
   margin: 0 auto;
 }
 
-.box{
+.card{
   margin: auto;
   margin-top: 20px;
   flex-direction: column;
   align-items: center;
-  width: 28vw;
-  height: 80vh;
-  padding: 20px;
-  border:#0a0a0a 2px solid;
-  border-radius: 15px;
   box-shadow: 7px 7px 10px gray;
   font-size: 15px; font-weight: 100; 
   letter-spacing: 1px;
-
-
  }
 
  .card-title{
@@ -215,10 +209,8 @@ nav li {
   
  }
 
- .internal-box{
+ .card{
   margin: auto;
-  width: 23vw;
-  height: 65vh;
   margin-top: 5px;
   padding-top: 10px;
   padding-bottom: 10px;
