--- a/Project3-Client/src/index.css
+++ b/Project3-Client/src/index.css
@@ -44,16 +44,6 @@ nav li {
   font-weight: 600;
 }
 
-.card {
-  width: 400px;
-  padding: 10px;
-  box-shadow: 0px 2px 3px grey;
-  margin: 0 auto;
-  margin-bottom: 20px;
-  background: #94a7c8;
-  border-radius: 4px;
-}
-
 .ProjectCard h3::after {
   content: url("https://education-team-2020.s3.eu-west-1.amazonaws.com/web-dev/m3/icon-expand.png");
   margin-left: 5px;
@@ -232,7 +222,19 @@ height: 20rem;
 }
 
 .current-location-btn {
-  width: 100px
+  width: 100px;
+  border: none;
+  box-shadow: 1px 1px 3px black;
+  font-size: 15px;
+  margin-bottom: 17px;
+}
+
+.searchInput {
+  max-width: 375px;
+  width: 17rem;
+  border: none;
+  box-shadow: 1px 1px 3px black;
+  
 }
 
 @media (max-device-width: 375px) {
@@ -292,10 +294,7 @@ height: 20rem;
  letter-spacing: 1px;
 }
  
-.AddFavour {
-  box-shadow: 7px 7px 10px grey;
-  border-radius: 15px;
-}
+
 
 
 }
