--- a/Project3-Client/src/index.css
+++ b/Project3-Client/src/index.css
@@ -10,7 +10,6 @@ a {
 button,
 select {
   padding: 5px 10px;
-  min-width: 50px;
   margin: 5px;
   font-size: 18px;
 }
@@ -227,6 +226,26 @@ height: 20rem;
   box-shadow: 1px 1px 3px black;
   font-size: 15px;
   margin-bottom: 17px;
+}
+
+.map-border {
+  border: none;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  box-shadow: 1px 1px 3px black
+}
+
+.create-favour-box {
+  margin-bottom: -15px;
+}
+
+.upload-profileImg-btn{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items:center;
+  width: 15rem;
+  max-width: 375px;
 }
 
 .searchInput {
