--- a/Project3-Client/src/index.css
+++ b/Project3-Client/src/index.css
@@ -134,7 +134,7 @@ nav li {
 }
 
 .btn-dark {
-  width: 200px;
+  width: 150px;
   border-radius: 15px;
 }
 
@@ -168,6 +168,23 @@ h2:hover {
   text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 40px #fff;
 }
 
+h4 {
+  transition: 0.5s linear;
+}
+h4:hover h4:nth-child(1) {
+  margin-right: 5px;
+}
+h4:hover h4:nth-child(1):after {
+  content: "'";
+}
+h4:hover h4:nth-child(2) {
+  margin-left: 30px;
+}
+h4:hover {
+  color: #fff;
+  text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 40px #fff;
+}
+
 .card h3 {
   margin-bottom: 10px;
   font-size: 25px;
@@ -191,6 +208,7 @@ h2:hover {
   border-radius: 15px;
   box-shadow: 1px 1px 7px gray;
   width: 80%;
+  margin: 0;
 }
 
 .edit-card-big {
@@ -202,8 +220,8 @@ h2:hover {
   box-shadow: 1px 1px 7px gray;
 }
 .internal-box{
-  width: 350px;
-  height: 480px;
+  width: 10px;
+  height: 3px;
 }
 .name  {
   justify-content: center;
@@ -212,6 +230,7 @@ h2:hover {
 }
 .text-signup{
   color: white;
+  margin-bottom: 10px;
 }
 .text-signup a{
   color: white;
